fix: dark mode compatible manifest colors

--- a/site/public/overrides.css
+++ b/site/public/overrides.css
@@ -35,7 +35,7 @@
   --color-error-container-light: rgb(255 218 214);
   --color-on-error-light: rgb(255 255 255);
   --color-on-error-container-light: rgb(65 0 2);
-  --color-background-light: rgb(250 250 238);
+  --color-background-light: #fafaee;
   --color-on-background-light: rgb(26 28 21);
   --color-surface-light: rgb(252 250 236);
   --color-on-surface-light: rgb(28 28 20);
@@ -72,7 +72,7 @@
   --color-error-container-dark: rgb(147 0 10);
   --color-on-error-dark: rgb(105 0 5);
   --color-on-error-container-dark: rgb(255 218 214);
-  --color-background-dark: rgb(26 17 15);
+  --color-background-dark: #1a110f;
   --color-on-background-dark: rgb(241 223 218);
   --color-surface-dark: rgb(25 18 12);
   --color-on-surface-dark: rgb(239 224 214);
@@ -91,7 +91,7 @@
   --color-surface-container-high-dark: rgb(49 40 34);
   --color-surface-container-highest-dark: rgb(60 51 44);
 
-  --color-dark-primary: rgb(143 75 56);
+  --color-dark-primary: #8f4b38;
   --color-on-dark-primary: rgb(58 11 1);
 
   /* ? Typography */
